refactored comments, add sticky and autosize

--- a/src/pug/client-add.pug
+++ b/src/pug/client-add.pug
@@ -59,7 +59,7 @@ block content
 
                   .ui-group
                     label Описание
-                    textarea.ui-input(rows='6' name="projectDescription")
+                    textarea.ui-input(rows='6' name="projectDescription" js-autosize )
 
                   .ui-group
                     label Тип анкеты
