--- a/src/pug/form-add.pug
+++ b/src/pug/form-add.pug
@@ -26,7 +26,7 @@ block content
               .ui-group.-inline
                 label(for="description") Описание
                 ._content
-                  textarea.ui-input(rows='6' name="description")
+                  textarea.ui-input(rows='6' name="description" js-autosize )
 
               .ui-group.-inline
                 label Тип анкеты
