--- a/src/components/commentCard/_comment-card.sass
+++ b/src/components/commentCard/_comment-card.sass
@@ -1,13 +1,28 @@
 
 .comment-card
+  margin-bottom: 24px
+  padding-bottom: 24px
+  border-bottom: 1px solid $borderColor
+
+  &:last-child
+    margin-bottom: 0
+    padding-bottom: 0
+    border-bottom: 0
   &__header
     display: flex
     flex-wrap: wrap
     margin-bottom: 8px
 
+  &__actions
+    margin-left: auto
+
   &__title
     margin: 0 7px 0 0
     font-weight: 700
+
+  &__company
+    display: inline-block
+    color: $colorLight
 
   &__caption
     margin: 0 0 7px
