--- a/src/components/formQuestions/_form-questions.sass
+++ b/src/components/formQuestions/_form-questions.sass
@@ -109,6 +109,8 @@
     margin-top: 30px
     border-radius: 4px
     background: $colorBg
+    &.change-background
+      background: #e7f8ff
     &-head
       padding: 20px 20px
       border-bottom: 1px solid $borderColor
@@ -139,6 +141,9 @@
       font-weight: 700
       display: flex
       align-items: center
+      .handle
+        font-size: 0
+        cursor: pointer
       .ico
         font-size: 16px
         color: $colorIcon
