--- a/src/pug/project-tasks.pug
+++ b/src/pug/project-tasks.pug
@@ -18,7 +18,7 @@ block content
             .container
               p Роль:
               .project-tasks__head-select
-                select.ui-input(js-select)
+                select.ui-input(js-select-chosen)
                   option Любая
                   option(value='0') Роль 1
                   option(value='1') Роль 1
@@ -27,7 +27,7 @@ block content
                   option(value='4') Роль 1
               p Сотрудник:
               .project-tasks__head-select
-                select.ui-input(js-select)
+                select.ui-input(js-select-chosen)
                   option Сотрудник:
                   option(value='0') Роль 1
                   option(value='1') Роль 1
