--- a/src/pug/projects.pug
+++ b/src/pug/projects.pug
@@ -10,7 +10,7 @@ include ../components/projectCard/_projectCard
 block content
 
   .page-main
-    +mainHeader("Проекты", false, false, true)
+    +mainHeader("Проекты", 'projects-create', false, true)
 
     .main-body
       .main-content(js-main-content-scroller)
