--- a/src/components/mainHeader/_main-header.sass
+++ b/src/components/mainHeader/_main-header.sass
@@ -39,3 +39,31 @@
 
   &.is-scrolled
     margin-top: 21px
+  &__filters
+    display: flex
+    align-items: center
+    margin-bottom: 21px
+  &__filter
+    margin-right: 50px
+    span
+      margin-right: 10px
+    &:last-child
+      margin-right: 0
+  &__create
+    color: $colorPrimary
+    display: flex
+    align-items: center
+    text-transform: uppercase
+    font-size: 13px
+    font-weight: 700
+    &-icon
+      border-radius: 50%
+      background: $colorPrimary
+      width: 30px
+      height: 30px
+      color: #fff
+      font-size: 12px
+      display: flex
+      align-items: center
+      justify-content: center
+      margin-right: 10px
