--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -7,6 +7,7 @@
 
 @import vendor/normalize
 @import magnific-popup/src/css/main
+@import vendor/chosen
 @import vendor/selectric
 @import vendor/tippy
 
