--- a/src/components/auth/_login.pug
+++ b/src/components/auth/_login.pug
@@ -30,4 +30,4 @@
 
   .auth__footer
     span Еще нет аккаунта?
-    a.auth__link(href='sign-up.html' title='Регистрация') Регистрация
+    a.auth__link(href='auth-signup.html' title='Регистрация') Регистрация
