--- a/src/components/auth/_signup.pug
+++ b/src/components/auth/_signup.pug
@@ -46,4 +46,4 @@
 
   .auth__footer
     span Уже регистрировались?
-    a.auth__link(href='sign-in.html' title='') Авторизация
+    a.auth__link(href='auth-login.html' title='') Авторизация
