--- a/src/pug/forms.pug
+++ b/src/pug/forms.pug
@@ -9,7 +9,7 @@ include ../components/projectCard/_projectCard
 block content
 
   .page-main
-    +mainHeader("Анкеты", false, 3)
+    +mainHeader("Анкеты", 'forms-create', 3)
 
 
     .main-body
