--- a/src/components/auth/_recover.pug
+++ b/src/components/auth/_recover.pug
@@ -18,4 +18,4 @@
 
   .auth__footer
     span Вспомнили ваш пароль?
-    a.auth__link(href='sign-in.html' title='Авторизация') Авторизация
+    a.auth__link(href='auth-login.html' title='Авторизация') Авторизация
