choosen support deselect and group results

--- a/src/components/mainHeader/_main-header.sass
+++ b/src/components/mainHeader/_main-header.sass
@@ -44,7 +44,9 @@
     align-items: center
     margin-bottom: 21px
   &__filter
-    margin-right: 50px
+    margin-right: 45px
+    display: flex
+    align-items: baseline
     span
       margin-right: 10px
     &:last-child
